--- a/client/cart.css
+++ b/client/cart.css
@@ -1,6 +1,3 @@
-/* font-family: 'Bebas Neue', cursive;
-font-family: 'Oswald', sans-serif */
-
 * {
     box-sizing: border-box;
     margin: 0;
@@ -55,72 +52,91 @@ header {
 }
 
 
-/* ---- Main stuff ---- */
+
+
+/* ------- Main stuff ------- */
 
 main {
     display: flex;
-    justify-content: center;
-
+    flex-direction: column;
+    align-items: center;
+    font-family: Bebas Neue;
 }
 
-#everything {
+
+#mainContainer {
+    margin-top: 50px;
+    width: 650px;
+}
+
+#totalItemsText {
+    font-size: 48pt;
+}
+
+#itemsDiv {
+    margin-top: 50px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
+    justify-items: center;
+}
 
+.imageSmall {
+    height: 100px;
+    border: 2px solid black
+}
+
+.singleItem {
     margin-top: 25px;
-
-    width: 650px;
-}
-
-#artTitleSection {
-    font-family: Bebas Neue;
-    font-size: 20pt;
-    display: flex;
-    width: 650px;
-    padding-left: 15px;
-}
-
-#itemsContainer {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.items {
-    display: flex;
-    flex-direction: column;
     justify-content: flex-start;
-
-    margin: 10px 10px;
-
-    width: 300px;
-    font-family: Bebas Neue;
-    border: 2px solid black;
-    border-radius: 2px;
+    align-items: flex-start;
 }
 
-.nft-large-pics {
-    cursor: pointer;
-}
-
-.information {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding: 5px 5px;
+.rightHalf {
+    margin-left: 15px;
 }
 
 .names {
-    color: black;
+    display: flex;
+    flex-direction: row;
     font-size: 20pt;
 }
 
-.prices {
+.basePrice {
     color: #4e8058;
-    font-size: 30pt;
+}
+
+.addAddons {
+    color: #4e8058;
+    padding-left: 50px;
 }
 
 
+/* ----- Order Total Stuff ------ */
+
+#allTotalStuff {
+    margin-top: 100px;
+}
+
+#orderTotalContainer {
+    display: flex;
+    flex-direction: row;
+    font-size: 30pt;
+}
+
+#orderTotalAmount {
+    color: #4e8058;
+}
+
+#placeOrderBtn {
+    cursor: pointer;
+
+    background-color: #4e8058;
+    height: 50px;
+    width: 100%;
+    font-family: bebas Neue;
+    font-size: 20pt;
+    color: white;
+    border-radius: 5px;
+}
